soluciones/Semanal-2/laravel-luis/templates/laravel/laravel-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: laravel
spec:
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: bitnami/laravel:11.0.9
          ports:
            - containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 12
            periodSeconds: 20
          resources:
            requests:
              memory: "150Mi"
              cpu: "100m"
            limits:
              memory: "180Mi"
              cpu: "120m"
